--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <title>Accueil</title>
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/templatemo-chain-app-dev.css">
-    <link rel="stylesheet" href="/assets/css/animated.css">
-    <link rel="stylesheet" href="/assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/templatemo-chain-app-dev.css">
+    <link rel="stylesheet" href="assets/css/animated.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
   </head>
 <body>
   <!-- ***** Chargement ***** -->
@@ -39,7 +39,7 @@
         <div class="col-12">
           <nav class="main-nav">
             <a href="index.html" class="logo">
-              <img src="/assets/images/logo.png" alt="MoneyTransfert">
+              <img src="assets/images/logo.png" alt="MoneyTransfert">
             </a>
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Accueil</a></li>
@@ -474,12 +474,12 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/js/owl-carousel.js"></script>
-  <script src="/assets/js/animation.js"></script>
-  <script src="/assets/js/imagesloaded.js"></script>
-  <script src="/assets/js/popup.js"></script>
-  <script src="/assets/js/custom.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/owl-carousel.js"></script>
+  <script src="assets/js/animation.js"></script>
+  <script src="assets/js/imagesloaded.js"></script>
+  <script src="assets/js/popup.js"></script>
+  <script src="assets/js/custom.js"></script>
 </body>
 </html>
