--- a/cgu.html
+++ b/cgu.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>Accueil</title>
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/templatemo-chain-app-dev.css">
-    <link rel="stylesheet" href="/assets/css/animated.css">
-    <link rel="stylesheet" href="/assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/templatemo-chain-app-dev.css">
+    <link rel="stylesheet" href="assets/css/animated.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
   </head>
 <body> 
   
@@ -75,11 +75,11 @@
           <div class="footer-widget">
             <h4>Nos raccourcis</h4>
             <ul>
-              <li><a href="/index.html">Accueil</a></li>
-              <li><a href="/index.html#services">Nos services</a></li>
-              <li><a href="/index.html#about">FAQ</a></li>
-              <li><a href="/index.html#avis">Avis</a></li>
-              <li><a href="/index.html#pricing">Convertir</a></li>
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="index.html#services">Nos services</a></li>
+              <li><a href="index.html#about">FAQ</a></li>
+              <li><a href="index.html#avis">Avis</a></li>
+              <li><a href="index.html#pricing">Convertir</a></li>
             </ul>
             <ul>
               <li><a href="https://discord.com/invite/UE55BDKjvP" target="_blank">Discord</a></li>
