--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="/assets/images/slider-dec.png" alt="">
+                <img src="assets/images/slider-dec.png" alt="">
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
             <h4>MoneyTransfert peut vous <em>garentir</em> :</h4>
-            <img src="/assets/images/heading-line-dec.png" alt="">
+            <img src="assets/images/heading-line-dec.png" alt="">
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
         <div class="align-self-center">
           <div class="section-heading">
             <h4><em>F</em>oire <em>A</em>ux <em>Q</em>uestions</h4>
-            <img src="/assets/images/heading-line-dec.png" alt="">
+            <img src="assets/images/heading-line-dec.png" alt="">
           </div>
           <div class="row">
             <div class="col-lg-6">
@@ -174,7 +174,7 @@
             <div class="col-lg-6">
               <div class="box-item">
                 <h4>Une erreur lors de l'envoie du formulaire de conversion, que faire ?</h4>
-                <p>Aucun soucis, contactez-nous au plus vite avant que votre conversion soit prise en charge dans la rubrique <a href="/contact.html">Contact</a>, on s'occupera de votre problème dans les plus bref délais.<br><br></p>
+                <p>Aucun soucis, contactez-nous au plus vite avant que votre conversion soit prise en charge dans la rubrique <a href="contact.html">Contact</a>, on s'occupera de votre problème dans les plus bref délais.<br><br></p>
               </div>
             </div>
             <div class="col-lg-6">
@@ -194,7 +194,7 @@
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
             <h4>Consultez les <em>avis</em> des clients ayant déjà utilisé MoneyTransfert</h4>
-            <img src="/assets/images/heading-line-dec.png" alt="">
+            <img src="assets/images/heading-line-dec.png" alt="">
             <p>Les avis proviennent de la plateforme <a href="https://fr.trustpilot.com/review/moneytransfert.fr" target="_blank">Trustpilot</a>.</p>
           </div>
         </div>
@@ -324,7 +324,7 @@
                           <div class="row">
                             <div class="col-lg-12">
                               <div class="client-content">
-                                <img src="/assets/images/quote.png" alt="">
+                                <img src="assets/images/quote.png" alt="">
                                 <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot il sera reposté ici quelques heures après.”</p>
                               </div>
                             </div>
@@ -338,7 +338,7 @@
                           <div class="row">
                             <div class="col-lg-12">
                               <div class="client-content">
-                                <img src="/assets/images/quote.png" alt="">
+                                <img src="assets/images/quote.png" alt="">
                                 <p>“CTO, Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
                                   lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                               </div>
@@ -353,7 +353,7 @@
                           <div class="row">
                             <div class="col-lg-12">
                               <div class="client-content">
-                                <img src="/assets/images/quote.png" alt="">
+                                <img src="assets/images/quote.png" alt="">
                                 <p>“May, Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
                                   lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                               </div>
@@ -368,7 +368,7 @@
                           <div class="row">
                             <div class="col-lg-12">
                               <div class="client-content">
-                                <img src="/assets/images/quote.png" alt="">
+                                <img src="assets/images/quote.png" alt="">
                                 <p>“Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
                                   lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                               </div>
@@ -383,7 +383,7 @@
                           <div class="row">
                             <div class="col-lg-12">
                               <div class="client-content">
-                                <img src="/assets/images/quote.png" alt="">
+                                <img src="assets/images/quote.png" alt="">
                                 <p>“Mark, Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
                                   lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                               </div>
@@ -408,7 +408,7 @@
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
             <h4>Formulaire de conversion <em>Paysafecard</em> vers <em>PayPal</em></h4>
-            <img src="/assets/images/heading-line-dec.png" alt="">
+            <img src="assets/images/heading-line-dec.png" alt="">
             <p>En complétant le formulaire ci-dessous vous acceptez les <a href="cgu.html">C.G.U.</a>.</p>
           </div>
         </div>
