--- a/cgu.html
+++ b/cgu.html
@@ -58,7 +58,12 @@
     </p><br>
     <p class="titre-cgu">Article 10 : Droit applicable et juridiction compétente</p>
     <p class="paragraphe-cgu">Le présent contrat est soumis à la législation française. L’absence de résolution à l’amiable des cas de litige entre les parties implique le recours aux tribunaux français compétents pour régler le contentieux.
-    </p><br>
+    </p><br><br>
+    <section>
+      <p class="titre-cgu">&nbsp;</p>
+      <p class="paragraphe-cgu">Dernière mise à jour de nos C.G.U. le : 05/02/2022 à 15:40
+      </p>
+    </section>
   </section>
 </div>
   <footer id="newsletter">
@@ -103,7 +108,7 @@
         </div>
         <div class="col-lg-3">
           <div class="footer-widget">
-            <h4>About Our Company</h4>
+            <h4>À propos de nous</h4>
             <p>MoneyTransfert est nouveau dans le domaine de conversion d'argent de Paysafecard vers PayPal. Nous comptons bien "dominer" le marcher pour mettre fin aux arnaques.</p>
           </div>
         </div>
