--- a/cgu.html
+++ b/cgu.html
@@ -86,11 +86,11 @@
           <div class="footer-widget">
             <h4>Nos raccourcis</h4>
             <ul>
-              <li><a href="index.html">Accueil</a></li>
-              <li><a href="index.html#services">Nos services</a></li>
-              <li><a href="index.html#about">FAQ</a></li>
-              <li><a href="index.html#avis">Avis</a></li>
-              <li><a href="index.html#pricing">Convertir</a></li>
+              <li><a href="https://www.moneytransfert.fr/">Accueil</a></li>
+              <li><a href="https://www.moneytransfert.fr/#services">Nos services</a></li>
+              <li><a href="https://www.moneytransfert.fr/#about">FAQ</a></li>
+              <li><a href="https://www.moneytransfert.fr/#avis">Avis</a></li>
+              <li><a href="https://www.moneytransfert.fr/#pricing">Convertir</a></li>
             </ul>
             <ul>
               <li><a href="https://discord.com/invite/UE55BDKjvP" target="_blank">Discord</a></li>
