--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col-12">
           <nav class="main-nav">
-            <a href="index.html" class="logo">
+            <a href="https://www.moneytransfert.fr/" class="logo">
               <img src="assets/images/logo.png" alt="MoneyTransfert">
             </a>
             <ul class="nav">
@@ -54,7 +54,7 @@
               <li><div class="gradient-button"><a href="#pricing">Convertir</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
-                <span>Menu</span>
+              <span>Menu</span>
             </a>
           </nav>
         </div>
@@ -120,13 +120,6 @@
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="service-item second-service">
-            <div class="icon"></div>
-            <h4>Une rapidité irréprochable</h4>
-            <p>Toutes les demandes, quel que soit le montant, sont prises au sérieux. Elles seront effectuées dans un délais de 24h maximum.</p>
-          </div>
-        </div>
-        <div class="col-lg-3">
           <div class="service-item third-service">
             <div class="icon"></div>
             <h4>Une proximité</h4>
@@ -138,6 +131,13 @@
             <div class="icon"></div>
             <h4>Un support vif</h4>
             <p>Nous garentissons à nos clients un bon support en cas de problème. Vous pouvez nous contacter par mail ou sur Discord.</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="service-item second-service">
+            <div class="icon"></div>
+            <h4>Une rapidité irréprochable</h4>
+            <p>Toutes les demandes, quel que soit le montant, sont prises au sérieux. Elles seront effectuées dans un délais de 24h maximum.</p>
           </div>
         </div>
       </div>
@@ -459,8 +459,8 @@
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>Discord</h4>
-            <p>Rejoingez notre serveur Discord :</p>
-            <p><a href="https://discord.com/invite/UE55BDKjvP" target="_blank">Discord.com/UE55BDKjvP</a></p>
+            <p>Rejoingez notre serveur Discord :<br>
+            <a href="https://discord.com/invite/UE55BDKjvP" target="_blank"><i style="font-size: 30px;" class="fab fa-discord"></i></a></p>
           </div>
         </div>
         <div class="col-lg-3">
