--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BTXH6S390R"></script>
     <script>
+      window.onload = function(){
+        alert("\nAttention :\nLes conversions débuterons le 18 février 2022 !\n\nRejoignez notre Discord pour en savoir plus !");
+      }
+      </script>
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
