--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BTXH6S390R"></script>
     <script>
-      window.onload = function(){
-        alert("\nAttention :\nLes conversions débuterons le 18 février 2022 !\n\nRejoignez notre Discord pour en savoir plus !");
-      }
-      </script>
-    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
@@ -75,8 +70,8 @@
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Convertissez vos cartes Paysafecard de manière sécurisée</h2>
-                    <p>MoneyTransfert a pour but de convertir vos cartes Paysafecard vers votre compte PayPal dans un service totalement sécurisé et fiable.</p>
+                    <h2>Convertissez vos recharges Paysafecard de manière sécurisée</h2>
+                    <p>MoneyTransfert a pour but de convertir vos recharges Paysafecard vers votre compte PayPal dans un service totalement sécurisé et fiable.</p>
                   </div>
                   <!-- <div class="col-lg-12">
                     <div class="white-button first-button scroll-to-section">
@@ -177,8 +172,8 @@
             </div>
             <div class="col-lg-6">
               <div class="box-item">
-                <h4>Est-il possible d'utiliser plusieurs cartes Paysafecard sur un seul échange ?</h4>
-                <p>Non, il n'est pas possible d'utiliser plusieurs cartes Paysafecard en un seul échange. Par exemple si vous avez deux cartes Paysafecard à convertir, vous devrez compléter le formulaire de conversion deux fois.<br><br></p>
+                <h4>Est-il possible d'utiliser plusieurs recharges Paysafecard sur un seul échange ?</h4>
+                <p>Non, il n'est pas possible d'utiliser plusieurs recharges Paysafecard en un seul échange. Par exemple si vous avez deux recharges Paysafecard à convertir, vous devrez compléter le formulaire de conversion deux fois.<br><br></p>
               </div>
             </div>
             <div class="col-lg-6">
