--- a/cgu.html
+++ b/cgu.html
@@ -93,7 +93,7 @@
               <li><a href="https://www.moneytransfert.fr/#pricing">Convertir</a></li>
             </ul>
             <ul>
-              <li><a href="https://discord.com/invite/UE55BDKjvP" target="_blank">Discord</a></li>
+              <li><a href="https://discord.gg/GAKXBbVZdh" target="_blank">Discord</a></li>
               <li><a href="https://fr.trustpilot.com/review/moneytransfert.fr" target="_blank">Trustpilot</a></li>
               <li><a href="#">C.G.U.</a></li>
             </ul>
@@ -103,7 +103,7 @@
           <div class="footer-widget">
             <h4>Discord</h4>
             <p>Rejoingez notre serveur Discord :</p>
-            <p><a href="https://discord.com/invite/UE55BDKjvP" target="_blank">Discord.com/UE55BDKjvP</a></p>
+            <p><a href="https://discord.gg/GAKXBbVZdh" target="_blank">Discord.com/GAKXBbVZdh</a></p>
           </div>
         </div>
         <div class="col-lg-3">
