--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       <a href="#pricing">Convertir !</a>
                     </div>
                     <div class="discord-button scroll-to-section">
-                      <a href="https://discord.com/invite/UE55BDKjvP" target="_blank"><i class="fab fa-discord"></i></a>
+                      <a href="https://discord.gg/GAKXBbVZdh" target="_blank"><i class="fab fa-discord"></i></a>
                     </div>
                   </div>
                 </div>
@@ -123,7 +123,7 @@
           <div class="service-item third-service">
             <div class="icon"></div>
             <h4>Une proximité</h4>
-            <p>Nous voulons être au plus proche de vous tout le temps, n'importe quand, pour cela nous avons mis en place un <a href="https://discord.com/invite/UE55BDKjvP" target="_blank">serveur Discord</a> communautaire.</p>
+            <p>Nous voulons être au plus proche de vous tout le temps, n'importe quand, pour cela nous avons mis en place un <a href="https://discord.gg/GAKXBbVZdh" target="_blank">serveur Discord</a> communautaire.</p>
           </div>
         </div>
         <div class="col-lg-3">
@@ -450,7 +450,7 @@
               <li><a href="#pricing">Convertir</a></li>
             </ul>
             <ul>
-              <li><a href="https://discord.com/invite/UE55BDKjvP" target="_blank">Discord</a></li>
+              <li><a href="https://discord.gg/GAKXBbVZdh" target="_blank">Discord</a></li>
               <li><a href="https://fr.trustpilot.com/review/moneytransfert.fr" target="_blank">Trustpilot</a></li>
               <li><a href="cgu.html">C.G.U.</a></li>
             </ul>
@@ -460,7 +460,7 @@
           <div class="footer-widget">
             <h4>Discord</h4>
             <p>Rejoingez notre serveur Discord :<br>
-            <a href="https://discord.com/invite/UE55BDKjvP" target="_blank"><i style="font-size: 30px;" class="fab fa-discord"></i></a></p>
+            <a href="https://discord.gg/GAKXBbVZdh" target="_blank"><i style="font-size: 30px;" class="fab fa-discord"></i></a></p>
           </div>
         </div>
         <div class="col-lg-3">
