--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <div class="section-heading">
             <h4>Consultez les <em>avis</em> des clients ayant déjà utilisé MoneyTransfert</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>Les avis proviennent de la plateforme <a href="https://fr.trustpilot.com/review/moneytransfert.fr" target="_blank">Trustpilot</a>.</p>
+            <p>Les avis proviennent de la plateforme <a href="https://fr.trustpilot.com/review/moneytransfert.fr" target="_blank">Trustpilot</a> ou de <a href="https://discord.gg/GAKXBbVZdh" target="_blank">Discord</a>.</p>
           </div>
         </div>
         <div class="col-lg-12">
@@ -330,7 +330,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot il sera reposté ici quelques heures après.”</p>
+                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici quelques heures après.”</p>
                               </div>
                             </div>
                           </div>
