--- a/cgu.html
+++ b/cgu.html
@@ -102,8 +102,8 @@
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>Discord</h4>
-            <p>Rejoingez notre serveur Discord :</p>
-            <p><a href="https://discord.gg/GAKXBbVZdh" target="_blank">Discord.com/GAKXBbVZdh</a></p>
+            <p>Rejoingez notre serveur Discord :<br>
+            <a href="https://discord.gg/GAKXBbVZdh" target="_blank"><i style="font-size: 30px;" class="fab fa-discord"></i></a></p>
           </div>
         </div>
         <div class="col-lg-3">
