--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
                       <div class="thumb contour">
                         <div class="row">
                           <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>Aucun avis</h4>
-                            <span class="date"></span>
+                            <h4>Elias Khokho</h4>
+                            <span class="date">10 Mars 2022</span>
                           </div>
                           <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">&nbsp;</span>
+                            <span class="category">Trustpilot</span>
                           </div>
                           <div class="col-lg-4 col-sm-4 col-12">
                               <i class="fa fa-star"></i>
@@ -225,33 +225,33 @@
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
-                              <span class="rating">&nbsp;</span>
+                              <span class="rating">5</span>
                           </div>
                         </div>
                       </div>
                     </div>
 
-                    <!-- <div>
+                    <div>
                       <div class="thumb contour">
                         <div class="row">
                           <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>Jake Harris Nyo</h4>
-                            <span class="date">29 November 2021</span>
+                            <h4></h4>
+                            <span class="date"></span>
                           </div>
                           <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">Digital Business</span>
+                            <span class="category">Comment ça marche ?</span>
                           </div>
-                          <div class="col-lg-4 col-sm-4 col-12">
+                          <!-- <div class="col-lg-4 col-sm-4 col-12">
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
-                              <span class="rating">4.5</span>
-                          </div>
+                              <span class="rating">5</span>
+                          </div> -->
                         </div>
                       </div>
-                    </div> -->
+                    </div>
 
                     <!-- <div>
                       <div class="thumb contour">
@@ -330,7 +330,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici quelques heures après.”</p>
+                                <p>“Incroyable respect des délais et très professionnel je recommande !”</p>
                               </div>
                             </div>
                           </div>
@@ -344,8 +344,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“CTO, Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
-                                  lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
+                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici quelques heures après.”</p>
                               </div>
                             </div>
                           </div>
