--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
                       <div class="thumb contour">
                         <div class="row">
                           <div class="col-lg-4 col-sm-4 col-12">
-                            <h4></h4>
-                            <span class="date"></span>
+                            <h4>I Orneta 🧬⏧</h4>
+                            <span class="date">14 Mars 2022</span>
                           </div>
                           <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">Comment ça marche ?</span>
+                            <span class="category">Discord</span>
                           </div>
                           <!-- <div class="col-lg-4 col-sm-4 col-12">
                               <i class="fa fa-star"></i>
@@ -253,49 +253,49 @@
                       </div>
                     </div>
 
-                    <!-- <div>
+                    <div>
                       <div class="thumb contour">
                         <div class="row">
                           <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>May Catherina</h4>
-                            <span class="date">27 November 2021</span>
+                            <h4>Nico93</h4>
+                            <span class="date">14 Mars 2022</span>
                           </div>
                           <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">Business &amp; Economics</span>
+                            <span class="category">Discord</span>
                           </div>
-                          <div class="col-lg-4 col-sm-4 col-12">
+                          <!-- <div class="col-lg-4 col-sm-4 col-12">
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <span class="rating">4.7</span>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
-                    </div> -->
+                    </div>
 
-                    <!-- <div>
+                    <div>
                       <div class="thumb contour">
                         <div class="row">
                           <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>Random User</h4>
-                            <span class="date">24 November 2021</span>
+                            <h4></h4>
+                            <span class="date"></span>
                           </div>
                           <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">New App Ecosystem</span>
+                            <span class="category">Comment ça marche ?</span>
                           </div>
-                          <div class="col-lg-4 col-sm-4 col-12">
+                          <!-- <div class="col-lg-4 col-sm-4 col-12">
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <span class="rating">3.9</span>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
-                    </div> -->
+                    </div>
 
                     <!-- <div class="last-thumb">
                       <div class="thumb contour">
@@ -344,37 +344,36 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
+                                <p>“C’est bon j’ai bien reçu mon argent, j’avais un peu peur car je m’étais fait arnaquer 20€ sur un autre site mais là croyez moi c’est bien réel.”</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="thumb">
+                          <div class="row">
+                            <div class="col-lg-12">
+                              <div class="client-content">
+                                <img src="assets/images/quote.png" alt="">
+                                <p>“Je viens de faire une conversion en pensant que c'était une autre arnaque mais je suis agréablement surpris j'ai bien pu convertir ma Paysafecard 
+                                  de 10 euros sans problème je recommande.”</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="thumb">
+                          <div class="row">
+                            <div class="col-lg-12">
+                              <div class="client-content">
+                                <img src="assets/images/quote.png" alt="">
                                 <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici quelques heures après.”</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="thumb">
-                          <div class="row">
-                            <div class="col-lg-12">
-                              <div class="client-content">
-                                <img src="assets/images/quote.png" alt="">
-                                <p>“May, Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
-                                  lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="thumb">
-                          <div class="row">
-                            <div class="col-lg-12">
-                              <div class="client-content">
-                                <img src="assets/images/quote.png" alt="">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
-                                  lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                               </div>
                             </div>
                           </div>
