--- a/index.html
+++ b/index.html
@@ -225,7 +225,6 @@
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
-                              <span class="rating">5</span>
                           </div>
                         </div>
                       </div>
@@ -269,8 +268,29 @@
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
                               <i class="fa fa-star"></i>
-                              <span class="rating">4.7</span>
+                              <span class="rating">5</span>
                           </div> -->
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="last-thumb">
+                      <div class="thumb contour">
+                        <div class="row">
+                          <div class="col-lg-4 col-sm-4 col-12">
+                            <h4>Kartal</h4>
+                            <span class="date">04 Avril 2022</span>
+                          </div>
+                          <div class="col-lg-4 col-sm-4 d-none d-sm-block">
+                            <span class="category">Discord</span>
+                          </div>
+                          <div class="col-lg-4 col-sm-4 col-12">
+                              <i class="fa fa-star"></i>
+                              <i class="fa fa-star"></i>
+                              <i class="fa fa-star"></i>
+                              <i class="fa fa-star"></i>
+                              <i class="fa fa-star"></i>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -296,28 +316,6 @@
                         </div>
                       </div>
                     </div>
-
-                    <!-- <div class="last-thumb">
-                      <div class="thumb contour">
-                        <div class="row">
-                          <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>Mark Amber Do</h4>
-                            <span class="date">21 November 2021</span>
-                          </div>
-                          <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">Web Development</span>
-                          </div>
-                          <div class="col-lg-4 col-sm-4 col-12">
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <span class="rating">4.3</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div> -->
                     
                   </div>
                 </div> 
@@ -373,7 +371,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici quelques heures après.”</p>
+                                <p>“Merci beaucoup à @Smiley !<br>Très professionnel, sympa & rapide.<br>Conversion de 50€”</p>
                               </div>
                             </div>
                           </div>
@@ -387,8 +385,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Mark, Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte ut labore et dolore magna aliqua darwin kengan
-                                  lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
+                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici quelques heures après.”</p>
                               </div>
                             </div>
                           </div>
