--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Accueil</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/92b46ebf49.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/templatemo-chain-app-dev.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BTXH6S390R"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-BTXH6S390R"></script> -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -83,7 +83,7 @@
                       <a href="#pricing">Convertir !</a>
                     </div>
                     <div class="discord-button scroll-to-section">
-                      <a href="https://discord.gg/GAKXBbVZdh" target="_blank"><i class="fab fa-discord"></i></a>
+                      <a href="https://discord.gg/GAKXBbVZdh" target="_blank"><img src="/assets/images/discord.png"></a>
                     </div>
                   </div>
                 </div>
@@ -213,63 +213,62 @@
                       <div class="thumb contour">
                         <div class="row">
                           <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>Elias Khokho</h4>
-                            <span class="date">10 Mars 2022</span>
+                            <h4>.Bixoouu™</h4>
+                            <span class="date">25 Avril 2022</span>
+                          </div>
+                          <div class="col-lg-4 col-sm-4 d-none d-sm-block">
+                            <span class="category">Discord</span>
+                          </div>
+                          <div class="col-lg-4 col-sm-4 col-12">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div>
+                      <div class="thumb contour">
+                        <div class="row">
+                          <div class="col-lg-4 col-sm-4 col-12">
+                            <h4>Moska</h4>
+                            <span class="date">19 Avril 2022</span>
+                          </div>
+                          <div class="col-lg-4 col-sm-4 d-none d-sm-block">
+                            <span class="category">Discord</span>
+                          </div>
+                          <!-- <div class="col-lg-4 col-sm-4 col-12">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                              <span class="rating">5</span>
+                          </div> -->
+                        </div>
+                      </div>
+                    </div>
+
+                    <div>
+                      <div class="thumb contour">
+                        <div class="row">
+                          <div class="col-lg-4 col-sm-4 col-12">
+                            <h4>Kartal</h4>
+                            <span class="date">04 Avril 2022</span>
                           </div>
                           <div class="col-lg-4 col-sm-4 d-none d-sm-block">
                             <span class="category">Trustpilot</span>
                           </div>
                           <div class="col-lg-4 col-sm-4 col-12">
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
                           </div>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div>
-                      <div class="thumb contour">
-                        <div class="row">
-                          <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>I Orneta 🧬⏧</h4>
-                            <span class="date">14 Mars 2022</span>
-                          </div>
-                          <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">Discord</span>
-                          </div>
-                          <!-- <div class="col-lg-4 col-sm-4 col-12">
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <span class="rating">5</span>
-                          </div> -->
-                        </div>
-                      </div>
-                    </div>
-
-                    <div>
-                      <div class="thumb contour">
-                        <div class="row">
-                          <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>Nico93</h4>
-                            <span class="date">14 Mars 2022</span>
-                          </div>
-                          <div class="col-lg-4 col-sm-4 d-none d-sm-block">
-                            <span class="category">Discord</span>
-                          </div>
-                          <!-- <div class="col-lg-4 col-sm-4 col-12">
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <span class="rating">5</span>
-                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -278,19 +277,19 @@
                       <div class="thumb contour">
                         <div class="row">
                           <div class="col-lg-4 col-sm-4 col-12">
-                            <h4>Kartal</h4>
-                            <span class="date">04 Avril 2022</span>
+                            <h4>Fulbion</h4>
+                            <span class="date">29 Mars 2022</span>
                           </div>
                           <div class="col-lg-4 col-sm-4 d-none d-sm-block">
                             <span class="category">Discord</span>
                           </div>
-                          <div class="col-lg-4 col-sm-4 col-12">
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                          </div>
+                          <!-- <div class="col-lg-4 col-sm-4 col-12">
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -306,11 +305,11 @@
                             <span class="category">Comment ça marche ?</span>
                           </div>
                           <!-- <div class="col-lg-4 col-sm-4 col-12">
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
-                              <i class="fa fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                               <span class="rating">3.9</span>
                           </div> -->
                         </div>
@@ -328,7 +327,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Incroyable respect des délais et très professionnel je recommande !”</p>
+                                <p>“Première fois que j’essaie la convertion et franchement pas déçu.”</p>
                               </div>
                             </div>
                           </div>
@@ -342,7 +341,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“C’est bon j’ai bien reçu mon argent, j’avais un peu peur car je m’étais fait arnaquer 20€ sur un autre site mais là croyez moi c’est bien réel.”</p>
+                                <p>“Merci à Smiley, très rapide et efficace 🙂”</p>
                               </div>
                             </div>
                           </div>
@@ -356,8 +355,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Je viens de faire une conversion en pensant que c'était une autre arnaque mais je suis agréablement surpris j'ai bien pu convertir ma Paysafecard 
-                                  de 10 euros sans problème je recommande.”</p>
+                                <p>“Merci à Smiley 😄 grâce à lui, j'ai filmora”</p>
                               </div>
                             </div>
                           </div>
@@ -371,7 +369,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Merci beaucoup à @Smiley !<br>Très professionnel, sympa & rapide.<br>Conversion de 50€”</p>
+                                <p>“1er trade parfait, gérant agréable et très rapide ! Merci beaucoup.”</p>
                               </div>
                             </div>
                           </div>
@@ -385,7 +383,7 @@
                             <div class="col-lg-12">
                               <div class="client-content">
                                 <img src="assets/images/quote.png" alt="">
-                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici quelques heures après.”</p>
+                                <p>“Lorsqu'un avis sera publié sur la plateforme Trustpilot ou sur notre serveur Discord, il sera reposté ici lors de la prochaine mise à jour du site web.”</p>
                               </div>
                             </div>
                           </div>
@@ -393,7 +391,7 @@
                       </div>
                     </li>
                   </ul>
-                </div>          
+                </div>
               </div>
             </div>
           </div>
@@ -455,13 +453,13 @@
           <div class="footer-widget">
             <h4>Discord</h4>
             <p>Rejoingez notre serveur Discord :<br>
-            <a href="https://discord.gg/GAKXBbVZdh" target="_blank"><i style="font-size: 30px;" class="fab fa-discord"></i></a></p>
+            <a href="https://discord.gg/GAKXBbVZdh" target="_blank"><img class="discordimage" src="/assets/images/discord.png"></i></a></p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>À propos de nous</h4>
-            <p>MoneyTransfert est nouveau dans le domaine de conversion d'argent de Paysafecard vers PayPal. Nous comptons bien "dominer" le marcher pour mettre fin aux arnaques.</p>
+            <p>MoneyTransfert est dans le domaine de conversion d'argent de Paysafecard vers PayPal depuis Janvier 2022. Nous comptons bien "dominer" le marcher pour mettre fin aux arnaques.</p>
           </div>
         </div>
         <div class="col-lg-12">
