--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/templatemo-chain-app-dev.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-BTXH6S390R"></script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BTXH6S390R"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
