--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </section>
   <section>
     <br><br><br><h5 style="text-align: center;">Contact : <a style="color: #000;" href="mailto: contact@moneytransfert.fr">contact@MoneyTransfert.fr</a></h5>
-    <br><br><h6 style="text-align: center;"><i>Mise à jour de la page le : 03/05/2022 à 18:20</i></h6>
+    <br><br><h6 style="text-align: center;"><i>Dernière mise à jour de la page le : 03/05/2022 à 18:20</i></h6>
   </section>
 </div>
   <footer id="newsletter">
