--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <div class="cgu-marge">
   <section class="marge-question-reponse" style="margin-left: 6%; margin-right: 6%;">
     <p class="titre-cgu" style="text-align: center; font-size: 34px;"><b>Nous sommes actuellement en maintenance...</b></p><br>
-    <p class="paragraphe-cgu">Fin de la maintenance prévu pour le : Vendredi 06 Mai 2022</p>
+    <p class="paragraphe-cgu">Fin de la maintenance prévu pour le : Lundi 09 Mai 2022</p>
     <p class="paragraphe-cgu">Notre site web étant inutilisable, veuillez-vous référer à notre serveur Discord : <a href="https://discord.gg/GAKXBbVZdh" target="_blank">discord.gg/GAKXBbVZdh</a>.
     </p>
   </section>
   <section>
     <br><br><br><h5 style="text-align: center;">Contact : <a style="color: #000;" href="mailto: contact@moneytransfert.fr">contact@MoneyTransfert.fr</a></h5>
-    <br><br><h6 style="text-align: center;"><i>Dernière mise à jour de la page le : 03/05/2022 à 18:20</i></h6>
+    <br><br><h6 style="text-align: center;"><i>Dernière mise à jour de la page le : 05/05/2022 à 17:55</i></h6>
   </section>
 </div>
   <footer id="newsletter">
